<resources>
    <string name="app_name">Flagg</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_create_activtiy">CreateActivtiy</string>
    <string name="title_activity_saved">SavedActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">ActivitySplash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="splash_text">FIND PROPERTY on the GO</string>
    <string name="splash_button">Get started</string>
    <string name="signIn">Sign in</string>
    <string name="signInSocialMedia">Sign in with your social account</string>
    <string name="or">Or</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype">Retype Password</string>
    <string name="createAccount">Create an Account</string>
    <string name="facebook_app_id">838648392959547</string>
    <string name="fb_login_protocol_scheme">fb838648392959547</string>
    <string name="first_name">First Name : </string>
    <string name="last_name">Surname : </string>
    <string name="email">Email</string>
    <string name="create_password">Password : </string>
    <string name="landline">Landline : </string>
    <string name="mobile">Mobile : </string>
    <string name="dob">Date of Birth : </string>
    <string name="mob">Month of Birth : </string>
    <string name="yob">Year of Birth : </string>
    <string name="submit">Submit</string>
    <string name="userAccounts">User Accounts</string>
    <string name="calendar">Calendar</string>
    <string name="privacySettings">Privacy Settings</string>
    <string name="alert">Alert</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="helpAndSupport">Help and Support</string>
    <string name="logout">Logout</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="province">Province</string>
    <string name="post_code">Post Code</string>
    <string name="type">Type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="cars">Car Parks</string>
    <string name="price">Price</string>
    <string name="rent_buy">Rent or Buy</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="post">Post</string>
    <string name="inspection_dates">Inspection dates</string>
    <string name="camera">Camera</string>
    <string name="Comments">Comments</string>
    <string name="upload">Upload</string>
    <string name="new_password">Enter new password</string>
    <string name="old_password">Current password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit_password">Submit</string>
    <string name="error_length_password">Minimum 6 characters requires</string>
    <string name="error_new_password">Empty or password doesn\'t match</string>
    <string name="error_old_password">Your current password doesn\'t match</string>
    <string name="action_notes">action_notes</string>
    <string name="walkthrough_start">Would you like us to suggest some partners who can help you buy your house?</string>
    <string name="walkthrough_finish_1">Congratulations, you\'re finished sourcing services in properation for your new property.</string>
    <string name="walkthrough_finish_2">Below is some important information you need to take a note of:</string>
    <string name="walkthrough_finish_3">Your PI number is:</string>
    <string name="walkthrough_finish_pi">PI-20170826-ab623f</string>
    <string name="walkthrough_finish_4">Quote this number when reaching out to your selected service providers and say that the  "Flagg App" sent you :)</string>
    <string name="walkthrough_finish_5">Don\'t worry, we have also forwarded this message to your email address so you can check this any time</string>
    <string name="walkthrough_finish_6">To make things easier, we have provided contact details for the partners you have selected below:</string>
    <string name="loan">First, let\'s source a bank to get your loan. Have a look at our partners below by tapping on them, and if you find a package or offer you like, tap the "I like this" button with the offer page</string>
    <string name="loan_no">No thanks, I can source my own</string>
    <string name="select_loan">Select a loan</string>
    <string name="loan_name_1">Lorem Ipsum</string>
    <string name="loan_pitch_1"><![CDATA[With a history as old as the founding of the nation itself, Lorem Ipsum has been
    with Australians and has grown alongside the generations of Australians. It only makes sense that we want to help
    you grow too by offering home loan packages that will help you buy into that dream home you’ve always dreamed of.]]></string>
    <string name="loan_info_1"><![CDATA[<b>Fixed Rate Loans (3 Years)</b><br>3.79% p.a. variable rate<br/>$2,327 / Monthly repayments for the period on a 30 year $500,000 loan paying P&I]]></string>
    <string name="loan_name_2">TOWER Finance</string>
    <string name="loan_pitch_2"><![CDATA[The bank of no-compromise in growing your wealth now offers home loans that follow suit.]]></string>
    <string name="loan_info_2"><![CDATA[<b>Fixed Rate</b><br>2-Year Fixed Rate<br/>3.99% p.a. (owner occupied)]]></string>
    <string name="loan_name_3">Falcon Bank</string>
    <string name="loan_pitch_3"><![CDATA[Flexibility has been a paramount facet when establishing Falcon as we believe we
    should treat our customers with the respect and trust that they deserve. Which is why we have created competitive home
    loan packages that promote ease and no-nonsense when getting buying into your new home.]]></string>
    <string name="loan_info_3"><![CDATA[<b>Fixed Rate Loans (3 Years)</b><br/>3.89% p.a. variable rate]]></string>
    <string name="lawyer">Would you like to source a lawyer/solicitor?</string>
    <string name="select_lawyer">Select a lawyer</string>
    <string name="lawyer_name_1">Hienaman And Partners</string>
    <string name="lawyer_pitch_1"><![CDATA[With over 150 years of providing the community competitive legal advice at matching
    rates, it’s no wonder we are the number 1 law firm when it comes to topics pertaining to Real Estate, whether it be inspecting
    purchasing, leasing, and renting contracts, or construction law. We will investigate, and provide you advice on what to do with
    your property.]]></string>
    <string name="lawyer_info_1"><![CDATA[<b>Rates</b><br/>Lawyers - Between $350 and $650 per hour<br/>Solicitors - $150 and $250 per hour]]></string>
    <string name="lawyer_name_2">The Golden Mile Legal Solutions</string>
    <string name="lawyer_pitch_2"><![CDATA[Nothing feels better than getting your legal life sorted out. We specialize in
    giving our customers that feeling, and we’ve now branched out to Real-Estate and we’re giving Flagg users a glimpse in
    how real-estate legal should be done.]]></string>
    <string name="lawyer_info_2"><![CDATA[<b>Rates</b><br>Lawyers - between $300 and $500 per hour<br>Solicitors - $150 and $200 per hour]]></string>
    <string name="electrical">Would you like to source a electrical provider?</string>
    <string name="select_electrical">Select a electrical provider</string>
    <string name="electrical_name_1">Nikola2You</string>
    <string name="electrical_pitch_1"><![CDATA[Nikola2You is a sustainable energy provider that invests in the future. All profits are used to invest in our renewable
    energy projects.]]></string>
    <string name="electrical_info_1"><![CDATA[<b>Residential Peak Rates</b><br />Peak Usage of first 11.1781 kWh/Day - [27.975 Cents per kWh]<br/><br />Peak Usage - Balance kWh/Day - [31.010 Cents per kWh] <br/><br/> Daily Supply Charge - [127.100 Cents per Day]]]></string>
    <string name="electrical_name_2">Bright Spark Electrical</string>
    <string name="electrical_pitch_2"><![CDATA[Want a home utility service without lock-in contracts? We’re so confident in our services
    that you will want to stay, and we won’t force you to either!]]></string>
    <string name="electrical_info_2"><![CDATA[<b>Residential Peak Rates</b><br />Peak Usage of first 11.1781 kWh/Day - [28.943 Cents per kWh]<br/><br />Peak Usage - Balance kWh/Day - [32.089 Cents per kWh] <br/><br/> Daily Supply Charge - [127.162 Cents per Day]]]></string>
    <string name="electrical_name_3">CELL Infrastructure</string>
    <string name="electrical_pitch_3"><![CDATA[We believe in strength is in numbers - that’s why we offer cheaper bills when we hit
    customer milestones and provide timed incentive programs to recommend friends and family. That’s the CELL philosophy.]]></string>
    <string name="electrical_info_3"><![CDATA[<b>Residential Peak Rates</b><br />Peak Usage of first 11.1781 kWh/Day - [30.943 Cents per kWh]<br/><br />Peak Usage - Balance kWh/Day - [34.089 Cents per kWh] <br/><br/> Daily Supply Charge - [129.162 Cents per Day]]]></string>
    <string name="gas">Would you like to source a gas provider?</string>
    <string name="select_gas">Select a gas provider</string>
    <string name="gas_name_1">Noble Gases</string>
    <string name="gas_pitch_1"><![CDATA[Providing a service fit for a king. Noble Gases, unlike most Gas providers, are available
    in most metropolitan and suburban areas - and we are still growing. That means, if you move house, you can take you bill with
    you, you don’t need to cancel!]]></string>
    <string name="gas_info_1"><![CDATA[<b>Rates</b><br />~$122 every quarter, for homes with approximately 3 people with medium usage.<br />We offer 10% discounts for timely paid bills! :)]]></string>
    <string name="gas_name_2">AtMos Gases</string>
    <string name="gas_pitch_2"><![CDATA[Attican and Mosely pioneered scalable, non-volatile gas harvesting and delivery systems as
    part of a classified research project in 1961, and today this technology has been permitted for commercial use. Providing Gas
    all across Australia, AtMos Gases utilizes these very delivery systems to provide cheaper than average gas that is harvest
    efficiently.]]></string>
    <string name="gas_info_2"><![CDATA[<b>Rates</b><br />~$120 every quarter, for homes with approximately 3 people, with medium usage]]></string>
    <string name="gas_name_3">CELL Infrastructure</string>
    <string name="gas_pitch_3"><![CDATA[We believe in strength is in numbers - that’s why we offer cheaper bills when we hit
    customer milestones and provide timed incentive programs to recommend friends and family - such as  $0.02 off you and your
    recommended person’s bill for each quarter for the lifetime of the account when they pay on time. That’s the CELL philosophy.]]></string>
    <string name="gas_info_3"><![CDATA[<b>Rates</b><br />~$130 every quarter, for homes with approximately 3 people, with medium usage.]]></string>
    <string name="action_property" />
    <string name="action_criteria" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
</resources>