<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@mipmap/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_privacySettings"
            android:icon="@mipmap/ic_privacy"
            android:title="@string/privacySettings" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@mipmap/ic_alert"
            android:title="@string/alert" />
        <item
            android:id="@+id/nav_password"
            android:icon="@mipmap/ic_privacy"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_help"
            android:title="@string/helpAndSupport" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>
</menu>
