<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_property"
        android:title="@string/action_property"
        android:icon="@drawable/ic_action_property"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item android:id="@+id/action_notes"
        android:title="@string/action_notes"
        android:icon="@drawable/ic_action_note"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item android:id="@+id/action_criteria"
        android:title="@string/action_criteria"
        android:icon="@drawable/flag"
        app:showAsAction="ifRoom|collapseActionView"
        />


</menu>
